--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       <div class="hero-title">Editionaly</div>
       <div class="hero-sub">Your Gen Z Newsletter </div>
       <div class="hero-desc">All the tech and trends you care about, minus the yawn factor <span class="emoji"></span></div>
-      <button class="cta-btn" onclick="document.getElementById('signup').scrollIntoView({behavior: 'smooth'})">Get Started for ₹5/month </button>
+      <button class="cta-btn" onclick="document.getElementById('signup').scrollIntoView({behavior: 'smooth'})">Get Started for ₹9/month </button>
     </section>
 
     <!-- Sample Issues Section -->
@@ -279,18 +279,18 @@
     <!-- CTA Section -->
     <section class="cta-section">
       <div class="cta-big">Want more of this in your inbox? <span class="emoji"></span></div>
-      <div class="cta-desc">Get weekly doses of tech news, career tips, and lifestyle content that actually matter to Gen Z <span class="emoji"></span></div>
-      <button class="cta-btn" onclick="document.getElementById('signup').scrollIntoView({behavior: 'smooth'})">Subscribe for ₹5/month ⚡</button>
+      <div class="cta-desc">Your daily dose of AI, tech news, and podcast recaps smart, snappy, and Gen Z approved. <span class="emoji"></span></div>
+      <button class="cta-btn" onclick="document.getElementById('signup').scrollIntoView({behavior: 'smooth'})">Subscribe for ₹9/month ⚡</button>
     </section>
 
     <!-- Sign-up Section -->
     <section class="signup-section" id="signup">
       <div class="signup-title">Join the Squad! <span class="emoji">🚀</span></div>
-      <div class="signup-desc">Subscribe now and get exclusive Gen Z content delivered weekly for just ₹5/month</div>
+      <div class="signup-desc">Subscribe now and get exclusive Gen Z content delivered weekly for just ₹9/month</div>
       <form class="signup-form" id="signupForm">
         <input class="signup-input" type="text" name="name" placeholder="Name (Optional) ">
         <input class="signup-input" type="email" name="email" placeholder="Email Address " required>
-        <button class="signup-btn" type="submit">Subscribe for ₹5/month 🔄</button>
+        <button class="signup-btn" type="submit">Subscribe for ₹9/month 🔄</button>
       </form>
       <div id="signupMsg" style="margin-top:10px;font-size:1rem;"></div>
       <div style="margin-top:10px;font-size:0.95rem;color:var(--text-muted);">
@@ -301,7 +301,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="brand">Editionaly</div>
-      <div>Not Your Boring Newsletter <span class="emoji">📰</span></div>
+      <div>Not Your Regular Newsletter <span class="emoji">📰</span></div>
       <div style="margin-top:8px;">Made By Gen Z  for Gen Z • Questions? Hit us up! at editionaly4u@gmail.com</div>
     </footer>
   </div>
