--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
         // Open Razorpay Checkout with subscription_id
         var options = {
-          key: 'rzp_test_enWk0oF6EDV5vn',
+          key: 'rzp_test_R5bPR19E8uSMpA',
           name: 'Editionaly',
           description: 'Gen Z Newsletter Subscription',
           handler: function (response){
