itzzzz working after depolyment

--- a/public/index.html
+++ b/public/index.html
@@ -294,7 +294,7 @@
       </form>
       <div id="signupMsg" style="margin-top:10px;font-size:1rem;"></div>
       <div style="margin-top:10px;font-size:0.95rem;color:var(--text-muted);">
-        <span class="emoji"></span> Secure UPI AutoPay • Cancel anytime • No hidden fees
+        <span class="emoji"></span> Note:Use UPI for Payments • Cancel anytime 
       </div>
     </section>
 
